@@ -1,3 +1,9 @@
+2011-02-06  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/tap/cable_list.h: Add usbjtagrs232.
+  * src/tap/cable/generic_usbconn_list.h: Add usbjtagrs232.
+  * src/tap/cable/ft2232.c: Add usbjtagrs232 support by Orasanu Lucian.
+
 2010-12-19  Mike Frysinger  <vapier@gentoo.org>
 
   * data/xilinx/xc6slx45/STEPPINGS: Add stepping 2 from Sébastien Bourdeauducq.
